[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynisp"
version = "0.1.0"
description = "NISP protocol server and datamodel in Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [{name = "Krix Tam"}]
dependencies = [
  "Twisted>=22.1.0",
  "pymoment>=0.1.0",
  "PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nisp*"]
exclude = ["nisp.js*", "*/test/*", "tests*"]